# swatter

./: App.js  README.md  app.json  index.js  metro.config.js
android/app/src/main/: AndroidManifest.xml
client/: .gitignore  app.json  package-lock.json  package.json
client/android/: settings.gradle
client/android/app/: BUCK  build.gradle
client/ios/: Podfile
client/ios/swatter/: Info.plist
client/ios/swatter.xcodeproj/: project.pbxproj
client/src/: config.js  context.js
client/src/navigation/: DrawerNavigator.js  MainNavigator.js  TabNavigator.js  index.js
client/src/navigation/addPost/: addPostScreen.js
client/src/res/: colors.js  images.js
client/src/utils/: index.js
ios/: Swatter.swift
ios/swatter/: AppDelegate.m  Info.plist
ios/swatter.xcworkspace/: contents.xcworkspacedata
ios/swatter/Base.lproj/: LaunchScreen.xib
server/: .gitignore  Cargo.toml  cluster-devnet.env  index.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
server/program/solgsn/: Cargo.toml
server/program/swatter/: Cargo.toml
server/program/swatter/src/: lib.rs  state.rs
server/setup/: api.js  loadProgram.js  solgsn.js
src/: navigator.js  state.js
src/components/: StoryItemList.js
src/navigation/activity/: activityCards.js  activityNavigator.js  activityTabs.js
src/navigation/addPost/: addPostNavigator.js
src/navigation/home/: homeNavigator.js  homeScreen.js
src/navigation/payment/: paymentScreen.js
src/navigation/profile/: profileNavigator.js  profileScreen.js
src/navigation/search/: SearchTopTags.js
src/screens/: Login.js
(+20 files in other folders)
