
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
byteorder = "1.3"
solana-program = "=1.5.8"
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde = "1.0.123"

[lib]
crate-type = ["cdylib", "lib"]
